# ImHex-Rust-Plugin-Template

./: CMakeLists.txt  Cargo.toml  README.md
lib/libimhex-rs/: Cargo.toml  build.rs
lib/libimhex-rs/proc_macros/src/: lib.rs
lib/libimhex-rs/src/: bookmarks.rs  lib.rs
source/: plugin_example.cpp  plugin_example.rs
